# codingaja

./: .gitignore  KONFIGURASI.md  PANDUAN.md  PRODUCTION_PARITY_PLAN.md  README.md  build.bat  pyproject.toml
.claw/plugins/: installed.json
rust/crates/api/tests/: mock_parity_harness.rs
rust/crates/claw-cli/src/: main.rs
rust/crates/commands/src/: lib.rs
rust/crates/runtime/src/: bash.rs  config.rs  conversation.rs  hooks.rs  lib.rs  mcp_stdio.rs  oauth.rs  task_registry.rs  team_cron_registry.rs
rust/crates/runtime/tests/: hooks_runtime_execution_parity_e2e.rs  runtime_core_parity_e2e.rs
rust/crates/tools/: Cargo.toml
rust/crates/tools/src/: lib.rs
src/: main.py  parity_audit.py  query_engine.py  runtime.py  task.py
tests/: test_porting_workspace.py
